--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+    position: relative;
     height: var(--nav-size);
     background-color: var(--nav-bg-color);
     padding: 0 4rem;
@@ -18,4 +19,33 @@
     font-size: var(--nav-logo-font-size);
     color: var(--text-color);
     width: 5rem;
+}
+
+@media (max-width: 800px) {
+    .navbar {
+        padding: 0;
+    }
+
+    .nav-menu {
+        position: absolute;
+        flex-direction: column;
+        justify-content: space-evenly;
+        top: var(--nav-size);
+        width: 100%;
+        height: 0;
+        opacity: 0;
+        background-color: var(--nav-mobile-menu-bg);
+        visibility: hidden;
+        transition: all 0.4s ease-in-out;
+    }
+
+    .nav-menu.is-active {
+        opacity: 1;
+        height: var(--nav-mobile-menu-height);
+        visibility: visible;
+    }
+
+    .nav-logo {
+        margin-left: 20%;
+    }
 }
