--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,30 @@ a {
   color: var(--text-color);
   text-decoration: none;
 }
+
+section {
+  max-width: 50rem;
+  height: 70vh;
+}
+
+.container {
+  padding: 5% 8%;
+}
+
+.even-columns {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
+  text-align: left;
+}
+
+.flex {
+  display: flex;
+  gap: 5%;
+  margin: 0 auto;
+}
+
+@media (max-width: 800px) {
+  section {
+    height: 60vh;
+  }
+}
