--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
   --heading-mobile-font-size: 2rem;
 
   /* content */
-  --content-font-size: 1.2rem;
+  --content-font-size: 1rem;
   --content-mobile-font-size: 1rem;
 
   /* other */
@@ -58,6 +58,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  /* object-fit: contain; */
+}
+
 section {
   max-width: 50rem;
   height: 70vh;
@@ -65,6 +69,12 @@ section {
 
 .container {
   padding: 5% 8%;
+  height: max-content;
+}
+
+.container-s {
+  padding: 1% 8%;
+  height: max-content;
 }
 
 .even-columns {
