working on Query page

--- a/src/Components/BubbleDisplayBar/BubbleDisplayBar.css
+++ b/src/Components/BubbleDisplayBar/BubbleDisplayBar.css
@@ -1,6 +1,7 @@
 .bubble-display-bar {
     display: flex;
     align-items: center;
+    gap: 2%;
     width: var(--bubble-display-bar-width);
     height: var(--bubble-display-bar-height);
     margin: 5% auto;
@@ -18,17 +19,6 @@
     scroll-snap-type: x mandatory;
     scroll-padding: 0 3%;
 }
-
-/* input {
-    width: calc(var(--bubble-display-bar-width) * 0.85);
-    height: 2rem;
-    border-radius: 15px;
-    padding-left: 5px;
-    font-size: 1rem;
-    color: var(--text-color);
-    margin: 0 3%;
-    background-color: rgb(89, 88, 88);
-} */
 
 @media (max-width: 800px) {
     .bubble-display-bar {
