--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,13 @@ section {
     opacity: 1;
   }
 }
+
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
