--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -18,6 +18,7 @@
 
 .nav-btn {
     color: var(--text-color);
+    filter: grayscale(100%);
     font-size: 0.9rem;
     height: 2rem;
     width: 5rem;
@@ -26,13 +27,13 @@
     border: 1px solid transparent;
     border-radius: 6px;
     transition: all 0.2s ease-in-out;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
-.nav-btn:hover {
+/* .nav-btn:hover {
     background-color: transparent;
     border: 1px solid var(--btn-color);
-}
+} */
 
 .link-remove-default {
     text-decoration: none;
