--- a/src/SectionTemplate/ImageDisplay/ImageDisplay.css
+++ b/src/SectionTemplate/ImageDisplay/ImageDisplay.css
@@ -4,6 +4,15 @@
     margin: 0 auto;
 }
 
+.image-wrapper img {
+    object-fit: contain;
+}
+
+/* Reference: https://stackoverflow.com/questions/24224112/css-filter-make-color-image-with-transparency-white */
+.brightness-0 {
+    filter: brightness(0) invert(1);
+}
+
 @media (max-width: 800px) {
     .hideInMobile {
         display: none;
